# Game-of-Life

./: .gitignore  CMakeLists.txt  README.md
include/: canvas.h
src/: canvas.cpp  main.cpp
